--- a/release.properties
+++ b/release.properties
@@ -1,19 +1,11 @@
 #release configuration
-#Sat Feb 22 23:16:17 IST 2020
+#Sun Feb 23 01:25:54 IST 2020
 projectVersionPolicyId=default
+scm.tagNameFormat=@{project.artifactId}-@{project.version}
 remoteTagging=true
 scm.commentPrefix=[maven-release-plugin] 
-project.dev.com.github.manjunathprabhakar\:cooker-maven-plugin=1.0.1-SNAPSHOT
-completedPhase=generate-release-poms
-project.rel.com.github.manjunathprabhakar\:cooker-maven-plugin=1.0.0
+pushChanges=true
+completedPhase=check-poms
 scm.url=scm\:git\:ssh\://github.com\:ManjunathPrabhakar/cookercucumber-maven-plugin.git
-project.scm.com.github.manjunathprabhakar\:cooker-maven-plugin.connection=scm\:git\:git\://github.com/ManjunathPrabhakar/cookercucumber-maven-plugin.git
-exec.additionalArguments=-Dgpg.passphrase\=madrockstar
-scm.tagNameFormat=@{project.artifactId}-@{project.version}
-pushChanges=false
-project.scm.com.github.manjunathprabhakar\:cooker-maven-plugin.tag=HEAD
-project.scm.com.github.manjunathprabhakar\:cooker-maven-plugin.developerConnection=scm\:git\:ssh\://github.com\:ManjunathPrabhakar/cookercucumber-maven-plugin.git
-scm.tag=cookercucumber
 exec.snapshotReleasePluginAllowed=false
 preparationGoals=clean verify
-project.scm.com.github.manjunathprabhakar\:cooker-maven-plugin.url=https\://github.com/ManjunathPrabhakar/cookercucumber-maven-plugin
