--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <!--    <groupId>org.manjunath</groupId>-->
     <groupId>com.github.manjunathprabhakar</groupId>
     <artifactId>cooker-maven-plugin</artifactId>
-    <version>1.0.3</version>
+    <version>1.0.4-SNAPSHOT</version>
     <packaging>maven-plugin</packaging>
 
     <name>Cooker Cucumber Maven Plugin</name>
