--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <!--    <groupId>org.manjunath</groupId>-->
     <groupId>com.github.manjunathprabhakar</groupId>
     <artifactId>cooker-maven-plugin</artifactId>
-    <version>2.0.5</version>
+    <version>2.0.6-SNAPSHOT</version>
     <packaging>maven-plugin</packaging>
 
     <name>Cooker Cucumber Maven Plugin</name>
@@ -40,7 +40,7 @@
         <developerConnection>scm:git:https://github.com/ManjunathPrabhakar/cookercucumber-maven-plugin.git
         </developerConnection>
         <url>https://github.com/ManjunathPrabhakar/cookercucumber-maven-plugin</url>
-        <tag>cooker-maven-plugin-2.0.5</tag>
+        <tag>cooker-maven-plugin</tag>
     </scm>
 
     <build>
