--- a/pom.xml
+++ b/pom.xml
@@ -1,40 +1,47 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <!--    <groupId>org.manjunath</groupId>-->
+    <!-- maven coordinates -->
     <groupId>com.github.manjunathprabhakar</groupId>
     <artifactId>cooker-maven-plugin</artifactId>
     <version>2.0.7-SNAPSHOT</version>
+
+    <!-- maven packaging type -->
     <packaging>maven-plugin</packaging>
 
+    <!-- maven project details -->
     <name>Cooker Cucumber Maven Plugin</name>
-    <description>An Cooker Cucumber Maven Plugin</description>
+    <description>Derives smallest Feature File, Allows Data from Excel(xls and xlsx)</description>
     <url>https://github.com/ManjunathPrabhakar/cookercucumber-maven-plugin</url>
+    <inceptionYear>2020</inceptionYear>
 
-    <properties>
-        <maven.compiler.source>1.8</maven.compiler.source>
-        <maven.compiler.target>1.8</maven.compiler.target>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-    </properties>
-
-    <licenses>
-        <license>
-            <name>The Apache License, Version 2.0</name>
-            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
-        </license>
-    </licenses>
-
+    <!-- maven repo Developer -->
     <developers>
         <developer>
             <name>Manjunath Prabhakar</name>
             <email>manjunath189@gmail.com</email>
             <organization>com.github.manjunathprabhakar</organization>
             <organizationUrl>https://github.com/ManjunathPrabhakar/cookercucumber-maven-plugin</organizationUrl>
+            <roles>
+                <role>Lead Enterprise Automation Engineer</role>
+            </roles>
+            <timezone>India</timezone>
         </developer>
     </developers>
 
+    <!-- maven project repo license -->
+    <licenses>
+        <license>
+            <name>The Apache License, Version 2.0</name>
+            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
+            <distribution>repo</distribution>
+            <comments>A business-friendly OSS license</comments>
+        </license>
+    </licenses>
+
+    <!-- maven project source code management details -->
     <scm>
         <connection>scm:git:git://github.com/ManjunathPrabhakar/cookercucumber-maven-plugin.git</connection>
         <developerConnection>scm:git:https://github.com/ManjunathPrabhakar/cookercucumber-maven-plugin.git
@@ -43,26 +50,69 @@
         <tag>cooker-maven-plugin</tag>
     </scm>
 
+    <!-- maven artifact distribution -->
+    <distributionManagement>
+        <snapshotRepository>
+            <id>ossrh</id>
+            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
+        </snapshotRepository>
+        <repository>
+            <id>ossrh</id>
+            <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
+        </repository>
+    </distributionManagement>
+
+    <!-- maven properties -->
+    <properties>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+
+        <!-- PLUGIN VERSION PROPERTIES -->
+        <maven.plugin.plugin>3.6.0</maven.plugin.plugin>
+        <maven.site.plugin>3.9.1</maven.site.plugin>
+        <nexus.staging.maven.plugin>1.6.7</nexus.staging.maven.plugin>
+        <maven.source.plugin>3.2.1</maven.source.plugin>
+        <maven.javadoc.plugin>2.9.1</maven.javadoc.plugin>
+        <maven.gpg.plugin>1.5</maven.gpg.plugin>
+        <maven.release.plugin>2.5.3</maven.release.plugin>
+
+        <!-- DEPENDENCY VERSION PROPERTIES -->
+        <maven.plugin.api>3.6.3</maven.plugin.api>
+        <maven.core>3.6.3</maven.core>
+        <maven.plugin.annotations>3.6.0</maven.plugin.annotations>
+        <maven.scm.provider.gitexe>1.11.2</maven.scm.provider.gitexe>
+
+        <cucumber.gerkhin>5.2.0</cucumber.gerkhin>
+        <cucumber.tagexpressions>3.0.0</cucumber.tagexpressions>
+        <apache.poi>4.1.2</apache.poi>
+
+
+    </properties>
+
+    <!-- maven build settings -->
     <build>
         <pluginManagement>
             <plugins>
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-plugin-plugin</artifactId>
-                    <version>3.6.0</version>
+                    <version>${maven.plugin.plugin}</version>
                 </plugin>
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-site-plugin</artifactId>
-                    <version>3.8.2</version>
+                    <version>${maven.site.plugin}</version>
                 </plugin>
             </plugins>
         </pluginManagement>
+
         <plugins>
             <plugin>
                 <groupId>org.sonatype.plugins</groupId>
                 <artifactId>nexus-staging-maven-plugin</artifactId>
-                <version>1.6.7</version>
+                <version>${nexus.staging.maven.plugin}</version>
                 <extensions>true</extensions>
                 <configuration>
                     <serverId>ossrh</serverId>
@@ -73,7 +123,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-source-plugin</artifactId>
-                <version>2.2.1</version>
+                <version>${maven.source.plugin}</version>
                 <executions>
                     <execution>
                         <id>attach-sources</id>
@@ -86,30 +136,16 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-javadoc-plugin</artifactId>
-                <version>2.9.1</version>
+                <version>${maven.javadoc.plugin}</version>
                 <configuration>
                     <source>8</source>
+                    <detectJavaApiLink>false</detectJavaApiLink>
                 </configuration>
                 <executions>
                     <execution>
                         <id>attach-javadocs</id>
                         <goals>
                             <goal>jar</goal>
-                        </goals>
-                    </execution>
-                </executions>
-
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-gpg-plugin</artifactId>
-                <version>1.5</version>
-                <executions>
-                    <execution>
-                        <id>sign-artifacts</id>
-                        <phase>verify</phase>
-                        <goals>
-                            <goal>sign</goal>
                         </goals>
                     </execution>
                 </executions>
@@ -123,8 +159,22 @@
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-gpg-plugin</artifactId>
+                <version>${maven.gpg.plugin}</version>
+                <executions>
+                    <execution>
+                        <id>sign-artifacts</id>
+                        <phase>verify</phase>
+                        <goals>
+                            <goal>sign</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-release-plugin</artifactId>
-                <version>2.5.3</version>
+                <version>${maven.release.plugin}</version>
                 <configuration>
                     <autoVersionSubmodules>true</autoVersionSubmodules>
                     <useReleaseProfile>false</useReleaseProfile>
@@ -135,78 +185,78 @@
         </plugins>
     </build>
 
-    <distributionManagement>
-        <snapshotRepository>
-            <id>ossrh</id>
-            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
-        </snapshotRepository>
-        <repository>
-            <id>ossrh</id>
-            <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
-        </repository>
-    </distributionManagement>
-
-
+    <!-- maven POM relationships -->
     <dependencies>
 
-
-        <!-- https://mvnrepository.com/artifact/io.cucumber/gherkin -->
-        <dependency>
-            <groupId>io.cucumber</groupId>
-            <artifactId>gherkin</artifactId>
-            <version>5.1.0</version>
-        </dependency>
-
+        <!-- PROJECT DEPENDENCIES FOR PLUGINS START -->
         <dependency>
             <!-- plugin interfaces and base classes -->
             <groupId>org.apache.maven</groupId>
             <artifactId>maven-plugin-api</artifactId>
-            <version>3.6.3</version>
+            <version>${maven.plugin.api}</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
             <!-- needed when injecting the Maven Project into a plugin  -->
             <groupId>org.apache.maven</groupId>
             <artifactId>maven-core</artifactId>
-            <version>3.6.3</version>
+            <version>${maven.core}</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
             <!-- annotations used to describe the plugin meta-data -->
             <groupId>org.apache.maven.plugin-tools</groupId>
             <artifactId>maven-plugin-annotations</artifactId>
-            <version>3.6.0</version>
+            <version>${maven.plugin.annotations}</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>org.apache.maven.scm</groupId>
             <artifactId>maven-scm-provider-gitexe</artifactId>
-            <version>1.11.2</version>
+            <version>${maven.scm.provider.gitexe}</version>
         </dependency>
+        <!-- PROJECT DEPENDENCIES FOR PLUGINS END -->
 
 
-<!--        <dependency>-->
-<!--            <groupId>io.cucumber</groupId>-->
-<!--            <artifactId>cucumber-java</artifactId>-->
-<!--            <version>5.6.0</version>-->
-<!--        </dependency>-->
-        <!-- https://mvnrepository.com/artifact/io.cucumber/tag-expressions -->
+        <!-- PROJECT DEPENDENCIES FOR COOKER CUCUMBER START -->
         <dependency>
+            <!-- plays an important role in parsing feature files -->
+            <groupId>io.cucumber</groupId>
+            <artifactId>gherkin</artifactId>
+            <version>${cucumber.gerkhin}</version>
+        </dependency>
+        <dependency>
+            <!-- plays an important role in filtering & selecting feature files -->
             <groupId>io.cucumber</groupId>
             <artifactId>tag-expressions</artifactId>
-            <version>3.0.0</version>
+            <version>${cucumber.tagexpressions}</version>
         </dependency>
-
         <dependency>
+            <!-- need this to read excel (xls format) -->
             <groupId>org.apache.poi</groupId>
             <artifactId>poi</artifactId>
-            <version>4.1.2</version>
+            <version>${apache.poi}</version>
         </dependency>
         <dependency>
+            <!-- need this to read excel (xlsx format) -->
             <groupId>org.apache.poi</groupId>
             <artifactId>poi-ooxml</artifactId>
-            <version>4.1.1</version>
+            <version>${apache.poi}</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/commons-io/commons-io -->
+        <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>2.8.0</version>
+        </dependency>
+        <!-- https://mvnrepository.com/artifact/com.google.code.gson/gson -->
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.8.6</version>
+        </dependency>
+
+        <!-- PROJECT DEPENDENCIES FOR COOKER CUCUMBER END -->
     </dependencies>
 
 </project>
