--- a/pom.xml
+++ b/pom.xml
@@ -87,6 +87,7 @@
         <cucumber.gerkhin>5.2.0</cucumber.gerkhin>
         <cucumber.tagexpressions>3.0.0</cucumber.tagexpressions>
         <apache.poi>4.1.2</apache.poi>
+        <google.gson>2.8.6</google.gson>
 
 
     </properties>
@@ -243,17 +244,11 @@
             <artifactId>poi-ooxml</artifactId>
             <version>${apache.poi}</version>
         </dependency>
-        <!-- https://mvnrepository.com/artifact/commons-io/commons-io -->
         <dependency>
-            <groupId>commons-io</groupId>
-            <artifactId>commons-io</artifactId>
-            <version>2.8.0</version>
-        </dependency>
-        <!-- https://mvnrepository.com/artifact/com.google.code.gson/gson -->
-        <dependency>
+            <!-- need this to parse cucumber json output files -->
             <groupId>com.google.code.gson</groupId>
             <artifactId>gson</artifactId>
-            <version>2.8.6</version>
+            <version>${google.gson}</version>
         </dependency>
 
         <!-- PROJECT DEPENDENCIES FOR COOKER CUCUMBER END -->
