updated README.md @ 14:57

--- a/pom.xml
+++ b/pom.xml
@@ -141,6 +141,7 @@
                 <configuration>
                     <source>8</source>
                     <detectJavaApiLink>false</detectJavaApiLink>
+                    <additionalparam>-Xdoclint:none</additionalparam>
                 </configuration>
                 <executions>
                     <execution>
@@ -150,13 +151,6 @@
                         </goals>
                     </execution>
                 </executions>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-javadoc-plugin</artifactId>
-                <configuration>
-                    <additionalparam>-Xdoclint:none</additionalparam>
-                </configuration>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -233,13 +227,7 @@
             <version>${cucumber.tagexpressions}</version>
         </dependency>
         <dependency>
-            <!-- need this to read excel (xls format) -->
-            <groupId>org.apache.poi</groupId>
-            <artifactId>poi</artifactId>
-            <version>${apache.poi}</version>
-        </dependency>
-        <dependency>
-            <!-- need this to read excel (xlsx format) -->
+            <!-- need this to read excel (xlsx & xls format) -->
             <groupId>org.apache.poi</groupId>
             <artifactId>poi-ooxml</artifactId>
             <version>${apache.poi}</version>
