--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <!-- maven coordinates -->
     <groupId>com.github.manjunathprabhakar</groupId>
     <artifactId>cooker-maven-plugin</artifactId>
-    <version>2.0.13-SNAPSHOT</version>
+    <version>2.0.13</version>
 
     <!-- maven packaging type -->
     <packaging>maven-plugin</packaging>
