--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <!-- maven coordinates -->
     <groupId>com.github.manjunathprabhakar</groupId>
     <artifactId>cooker-maven-plugin</artifactId>
-    <version>2.0.26-SNAPSHOT</version>
+    <version>2.0.26</version>
 
     <!-- maven packaging type -->
     <packaging>maven-plugin</packaging>
@@ -46,7 +46,8 @@
         <developerConnection>scm:git:https://github.com/ManjunathPrabhakar/cookercucumber-maven-plugin.git
         </developerConnection>
         <url>https://github.com/ManjunathPrabhakar/cookercucumber-maven-plugin</url>
-    </scm>
+      <tag>cooker-maven-plugin-2.0.26</tag>
+  </scm>
 
     <!-- maven artifact distribution -->
     <distributionManagement>
