--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <!-- maven coordinates -->
     <groupId>com.github.manjunathprabhakar</groupId>
     <artifactId>cooker-maven-plugin</artifactId>
-    <version>2.0.33</version>
+    <version>2.0.34-SNAPSHOT</version>
 
     <!-- maven packaging type -->
     <packaging>maven-plugin</packaging>
@@ -48,7 +48,7 @@
         <developerConnection>scm:git:https://github.com/ManjunathPrabhakar/cookercucumber-maven-plugin.git
         </developerConnection>
         <url>https://github.com/ManjunathPrabhakar/cookercucumber-maven-plugin</url>
-        <tag>cooker-maven-plugin-2.0.33</tag>
+        <tag>HEAD</tag>
     </scm>
 
     <!-- maven artifact distribution -->
